--- a/RentalStore.Context/RentalStore.Context.csproj
+++ b/RentalStore.Context/RentalStore.Context.csproj
@@ -69,6 +69,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201701150858380_InitialCreate.cs" />
+    <Compile Include="Migrations\201701150858380_InitialCreate.Designer.cs">
+      <DependentUpon>201701150858380_InitialCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="RentalStoreContext.cs" />
     <Compile Include="Configurations\BaseConfuguration.cs" />
@@ -90,6 +94,11 @@
       <Project>{90ffb621-6f29-4a4a-8c07-525762b85698}</Project>
       <Name>RentalStore.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201701150858380_InitialCreate.resx">
+      <DependentUpon>201701150858380_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
