--- a/RentalStore/RentalStore.csproj
+++ b/RentalStore/RentalStore.csproj
@@ -154,6 +154,7 @@
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\loading-bar.min.css" />
     <Content Include="Content\css\style.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
@@ -184,6 +185,14 @@
     <Content Include="Scripts\vendors\angular-cookies\angular-cookies.js" />
     <Content Include="Scripts\vendors\angular-cookies\angular-cookies.min.js" />
     <Content Include="Scripts\vendors\angular-cookies\index.js" />
+    <Content Include="Scripts\vendors\angular-loading-bar\build\loading-bar.css" />
+    <Content Include="Scripts\vendors\angular-loading-bar\build\loading-bar.js" />
+    <Content Include="Scripts\vendors\angular-loading-bar\build\loading-bar.min.css" />
+    <Content Include="Scripts\vendors\angular-loading-bar\build\loading-bar.min.js" />
+    <Content Include="Scripts\vendors\angular-loading-bar\Gruntfile.js" />
+    <Content Include="Scripts\vendors\angular-loading-bar\index.js" />
+    <Content Include="Scripts\vendors\angular-loading-bar\src\loading-bar.css" />
+    <Content Include="Scripts\vendors\angular-loading-bar\src\loading-bar.js" />
     <Content Include="Scripts\vendors\angular-local-storage\.gitattributes" />
     <Content Include="Scripts\vendors\angular-local-storage\.gitignore" />
     <Content Include="Scripts\vendors\angular-local-storage\demo\demo-app.js" />
@@ -493,6 +502,15 @@
     <Content Include="Scripts\vendors\angular\LICENSE.md" />
     <Content Include="Scripts\vendors\angular\package.json" />
     <Content Include="Scripts\vendors\angular\README.md" />
+    <Content Include="Scripts\vendors\angular-loading-bar\.bower.json" />
+    <Content Include="Scripts\vendors\angular-loading-bar\bower.json" />
+    <Content Include="Scripts\vendors\angular-loading-bar\CHANGELOG.md" />
+    <Content Include="Scripts\vendors\angular-loading-bar\CONTRIBUTING.md" />
+    <Content Include="Scripts\vendors\angular-loading-bar\ISSUE_TEMPLATE.md" />
+    <Content Include="Scripts\vendors\angular-loading-bar\LICENSE" />
+    <Content Include="Scripts\vendors\angular-loading-bar\package.json" />
+    <Content Include="Scripts\vendors\angular-loading-bar\PULL_REQUEST_TEMPLATE.md" />
+    <Content Include="Scripts\vendors\angular-loading-bar\README.md" />
     <None Include="Scripts\vendors\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\vendors\jquery-1.10.2.js" />
     <Content Include="Scripts\vendors\jquery-1.10.2.min.js" />
